--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     </div>
 
     <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbwrBor8Sht5-T7Rt-X9lHc-K6Bhdg8DoohYEqgXpc520HgU2Wex/exec'
-        const form = document.forms['google-sheet']
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwrBor8Sht5-T7Rt-X9lHc-K6Bhdg8DoohYEqgXpc520HgU2Wex/exec']
 
         form.addEventListener('submit', e => {
             e.preventDefault()
